<resources>
    <string name="app_name">Level4task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="amount">amount</string>
    <string name="add_product">add product</string>
    <string name="add_product_dialog_title">Add a product to your list!</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="welcome">Welcome</string>
    <string name="instructions_select_rock_paper_or_scissors_to_play">Instructions: select rock, paper or scissors to play.</string>
    <string name="your_all_time_statistics">Your all time statistics</string>
    <string name="win_0_draw_0_lose_0">Win: 0 Draw: 0 Lose: 0</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose!</string>
    <string name="draw">Draw!</string>
    <string name="v_s">V.S.</string>
    <string name="todo">TODO</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
</resources>